Fix Pagination overflow - using clear fix to ensure element does not affect   below elements

--- a/app/assets/stylesheets/components/_pagination-atoz.scss
+++ b/app/assets/stylesheets/components/_pagination-atoz.scss
@@ -1,5 +1,6 @@
 .pagination-atoz {
-  overflow: hidden;
+  @extend %contain-floats;
+
   padding-left: 1px;
   margin: 20px 0;
 }
