--- a/app/assets/stylesheets/layout/_filter-form.scss
+++ b/app/assets/stylesheets/layout/_filter-form.scss
@@ -5,3 +5,8 @@
 .l-filter-form__checkbox-label {
   margin-left: 10px;
 }
+
+.l-filter-form__display-label {
+  display: inline-block;
+  font-weight: normal;
+}
